# prototype-workout-tracker-backend

./: Cargo.toml  README.md  TODO.md  bacon.toml
src/: default_exercise_list.rs  em_exercise_data.rs  fuzzy_exercise_matching.rs  lib.rs  main.rs  strong_data.rs  strong_debug.csv
test_data/: em_exercise_specs.csv  strong_test_data.csv
tests/: mod.rs
