[package]
name = "workout_tracker"
version = "0.1.0"
edition = "2021"


[lib]
name = "workout_tracker_backend"
path = "src/lib.rs"

[[bin]]
name = "workout_tracker_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
csv = "1.3.0"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
serde_with = "3.6.1"
strum = { version = "0.26.1", features = ["derive"] }
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
